# c2c.template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .travis.yml  CHANGELOG.md  DEVELOPMENT.rst  LICENSE  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.  setup.cfg  setup.py
.github/: ci-upgrade.yaml  renovate.json5
.github/workflows/: ci.yaml  codeql.yaml  main.yaml
c2c/: __init__.py  template.py
c2c/template/: __init__.py  config.py
c2c/tests/: alias_const.yaml  alias_project.yaml  builder_vars.yaml  builder_vars_dict.yaml  config.yaml  env.tmpl.mako  extends-run-env.yaml  include.yaml  include_1.yaml  inherit.yaml  jinja.jinja  loop.yaml  mako.mako  no_interpreted.yaml  path.yaml  postprocess.yaml  recursive.yaml  recursive_int.yaml  run-env.yaml  template.in  test_template.py  update.yaml  vars.yaml
ci/: config.yaml  requirements.txt
