[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = "c2c.template"
version = "0.0.0"
description = "Vars collector and template runner."
readme = "README.rst"
authors = ["Camptocamp <info@camptocamp.com>"]
repository = "https://github.com/camptocamp/c2c.template"
license = "BSD-2-Clause"
keywords = ["template"]
packages = [{ include = "c2c/template" }]
classifiers = [
    'Environment :: Console',
    'Framework :: Bottle',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Utilities',
    'Typing :: Typed',
]
include = ["c2c/template/py.typed"]

[tool.poetry.scripts]
c2c-template = "c2c.template:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
bottle = "0.13.2"
Jinja2 = "3.1.6"
Mako = "1.3.9"
PyYAML = "6.0.2"
pyyaml-include = "2.2"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.16.0", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.22.3"
pytest = "8.3.4"
types-PyYAML = "6.0.12.20241230"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
pyyaml-include = ">=2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"
